--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,6 +1,4 @@
-# ===================================
-# Stage 1: Build React frontend
-# ===================================
+# Stage 1: Build
 FROM node:20-alpine AS builder
 
 WORKDIR /app
@@ -17,9 +15,7 @@ COPY . .
 # Build production bundle
 RUN npm run build
 
-# ===================================
-# Stage 2: Serve with Nginx
-# ===================================
+# Stage 2: Nginx
 FROM nginx:alpine
 
 # Copy built files from builder stage
