--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,5 +1,5 @@
-upstream app_backend {
-    server app:3000;
+upstream api_backend {
+    server api:8000;
 }
 
 server {
@@ -8,33 +8,27 @@ server {
 
     client_max_body_size 10M;
 
-    # Статические файлы
     location / {
-        proxy_pass http://app_backend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # API endpoints
     location /api/ {
-        proxy_pass http://app_backend;
+        proxy_pass http://api_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
-    # Health check
     location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
+        proxy_pass http://api_backend/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
     }
 }
